...
                                                </items>
                                            </menu>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Product" id="H8h-7b-M4v" userLabel="Product">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Product" id="HyV-fh-RgO">
                                    <items>
                                        <menuItem title="Run" keyEquivalent="R" id="snW-S8-Cw5" userLabel="Run">
                                            <connections>
                                                <action selector="doRunCode:" target="Ady-hI-5gd" id="0i2-n2-6HV"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Window" id="aUF-d1-5bR">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
                                    <items>
                                        <menuItem title="Minimize" keyEquivalent="m" id="OY7-WF-poV">
                                            <connections>
                                                <action selector="performMiniaturize:" target="Ady-hI-5gd" id="VwT-WD-YPe"/>
...
